8.6.5 (10-02-2023)
- Refactor: Remove method Customer::getFiscalCountry and other related methods of similar name. This method cause some confusion and is replaced by Customer::getAddressCountryCode

8.6.4 (09-02-2023)
- Bug Fix: Fix NPE in creating tuitions for registration, specifically in calculating the discounts table

8.6.3 (07-02-2023)
- Bug Fix: In exempting tuition installments, when creating tuition debts, consider only treasury events of the same degree as the registration

8.6.2 (30-01-2023)
- Refactor: Replace reference for FinantialDocumentEntry::setFinantialDocument by FinantialDocumentEntry::addToFinantialDocument
- Bug Fix: Consider totally exempted debit entries, created in CreateDebtsStrategy, which might be exempted due to reservation taxes

8.6.1 (26-01-2023)
- Refactor: method to edit course cost function

8.6.0 (04-01-2023)
- Refactor: Split TreasuryEvent::invokeSettlementCallbacks method in two, one receiving the settlement note and other the treasury exemption

8.5.4 (15-12-2022)
- Improvement: Check if there is already an active customer with the same fiscal number, only within the instances of the subclasses AdhocCustomer and PersonCustomer
- Improvement: Allow set code in Reservation Tax, in creation and edition

8.5.3 (12-12-2022)
- Bug Fix: Support delete reservation tax
- Refactor: Remove association of product and finantial entity with the reservation tax event target

8.5.2 (08-12-2022)
- Bug Fix: Protect with try-catch for NPE, the customer identification and name retrieval in getting the error description, in the debt report
- Improvement: Discount tuition amount from other treasury events with exemption

8.5.1 (23-11-2022)
- Refactor: Replace references of RegistrationStateType for RegistrationStateTypeEnum

8.5.0 (10-11-2022)
- Improvement: Support assign payor debt account to tuition installments

8.4.9 (03-11-2022)
- Improvement: Allow the creation of individual tuition payment plan installments