@@ -31,7 +31,7 @@
 		<dependency>
 			<groupId>org.fenixedu</groupId>
 			<artifactId>fenixedu-treasury-base</artifactId>
-			<version>10.1.2</version>
+			<version>10.1.3</version>
 		</dependency>
 		<dependency>
 			<groupId>org.fenixedu</groupId>
